<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>basics_cpp</name>
  <version>0.0.0</version>
  <description>ROS2 Jazzy C++ basics — turtlesim integration</description>
  <maintainer email="andi.zhou@gmail.com">jiaren</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies: required for both build and execution -->
  <depend>rclcpp</depend>           <!-- ROS2 C++ client library, required for all nodes -->
  <depend>geometry_msgs</depend>    <!-- Provides Twist message type for velocity commands -->
  <depend>turtlesim</depend>        <!-- Provides Pose message type for turtle position data -->

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
